oxiplate-derive/tests/broken/if/if-let-bad-field-value.stderr
error: Expected type or ident
 --> tests/broken/if/if-let-bad-field-value.rs:6:26
  |
6 |   {%- if let Data { value: :( } = data -%}
  |  __________________________^
7 | |     Data found.
8 | | {%- endif -%}
9 | | "#
  | |_^
